# test-receiver

./: buildspec.yml  config.py  pyproject.toml
config/: settings.yaml
config/filter_specs/: filter_all.json  filter_blue_or_green.json  filter_grey.json  filter_yellow_and_red.json
config/marker_specs/: root_markers.yml
config/marker_specs/sample/: attributes.yml
scripts/: execute_tests.py
tests/sample/: test_sample.py
