[tool.poetry]
name = "test-receiver"
version = "0.1.0"
description = ""
authors = ["Gleams API user <Stephen.Swannell+ghapi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11.0"
pytest = "^7.2.0"
pytest-xdist = ">=2.5.0,<3.0.0"
pytest-coveragemarkers = "^2.0.0"
click = "^8.1.3"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
execute-pytest = 'scripts.execute_tests:trigger_pytest'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--json-report",
    "--markers-location=config/marker_specs/root_markers.yml"
]
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning:boto.*:",
    "ignore::DeprecationWarning:moto.*:",
    "ignore::FutureWarning:boto.*:",
]
log_cli_level = "info"
testpaths = [ "tests" ]
markers = []
